tao_form_khach_hang

--- a/html_baitap/tao_form_khach_hang/tao_form_khach_hang.html
+++ b/html_baitap/tao_form_khach_hang/tao_form_khach_hang.html
@@ -66,7 +66,7 @@ Please take a few moments to complete this satisfaction survey.
 <div>
     <span style="font-weight: bold"> What would you pay for the new product?</span><br>
     <span>
-    $ <input style="width: 70px" : " type="text" name="text" > . <input style="width: 10px" type="text" name="text">
+    $ <input style="width: 70px": " type="text" name="text" > . <input style="width: 10px" type="text" name="text">
     </span>
 </div>
 
@@ -74,6 +74,103 @@ Please take a few moments to complete this satisfaction survey.
     <span style="font-weight: bold"> What features would you like to see in the new product.</span><br>
     <textarea rows="4" cols="500"></textarea>
 </div>
+<div>
+    Please rate your level of agreement with the following statements. <br>
+    <table border="1">
+        <tr>
+            <th>
+                <span> </span>
+            </th>
+            <td>
+                Strongly Disagree
+            </td>
+            <td>
+                Disagree
+            </td>
+            <td>
+                Agree
+            </td>
+            <td>
+                Strongly Agree
+            </td>
+        </tr>
+        <tr>
+            <th >
+                Our products are priced fairy
+            </th>
+            <th >
+                <input type="radio"> <br>
+                <span style="font-size: 12px "> 1 </span>
+            </th>
+            <th >
+                <input type="radio"> <br>
+                <span style="font-size: 12px "> 2 </span>
+
+            </th>
+            <th >
+                <input type="radio"> <br>
+                <span style="font-size: 12px "> 3 </span>
+
+            </th>
+            <th>
+                <input type="radio"> <br>
+                <span style="font-size: 12px "> 4 </span>
+
+            </th>
+        </tr>
+        <tr>
+            <th >
+                Our products are high fairy
+            </th>
+            <th>
+                <input type="radio"> <br>
+                <span style="font-size: 12px "> 1 </span>
+            </th>
+            <th >
+                <input type="radio"> <br>
+                <span style="font-size: 12px "> 2 </span>
+
+            </th>
+            <th >
+                <input type="radio"> <br>
+                <span style="font-size: 12px "> 3 </span>
+
+            </th>
+            <th >
+                <input type="radio"> <br>
+                <span style="font-size: 12px "> 4 </span>
+
+            </th>
+        </tr>
+        <tr>
+            <th >
+                You would recommend our product to a friend or cowoker
+            </th>
+            <th>
+                <input type="radio"> <br>
+                <span style="font-size: 12px "> 1 </span>
+            </th>
+            <th>
+                <input type="radio"> <br>
+                <span style="font-size: 12px "> 2 </span>
+
+            </th>
+            <th>
+                <input type="radio"> <br>
+                <span style="font-size: 12px "> 3 </span>
+
+            </th>
+            <th>
+                <input type="radio"> <br>
+                <span style="font-size: 12px "> 4 </span>
+
+            </th>
+        </tr>
+
+
+    </table>
+</div>
+<input type="submit" value="Submit">
 
 
 </body>
