tao_form_don_gian

--- a/html_baitap/tao_form_don_gian/tao_form_don_gian.html
+++ b/html_baitap/tao_form_don_gian/tao_form_don_gian.html
@@ -2,9 +2,72 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
-<body>
-$END$
-</body>
+<fieldset style="background-color: aquamarine">
+    <body>
+
+    <h1 style="background-color: red; color: white">
+
+        SỞ THÍCH CỦA BẠN
+
+
+    </h1>
+
+
+    <div style="color: blue;font-family:Arial,serif ">
+        <table>
+            <tr>
+                <td>
+                    Họ và tên
+                </td>
+                <td>
+                    <input type="text" name="name">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Email
+                </td>
+                <td>
+                    <input type="text" name="email">
+                </td>
+            </tr>
+
+        </table>
+
+    </div>
+    <div>
+        <table>
+            <tr>
+                <th style="color: blue">
+                    Sở thích
+                </th>
+
+                <td style="color: orange">
+                    <input type="checkbox" name="hobby" value="sport">Thể thao
+                    <input type="checkbox" name="hobby" value="music">Âm nhạc
+                    <input type="checkbox" name="hobby" value="book"> Đọc sách <br>
+                    <input type="checkbox" name="hobby" value="surfing">Lướt web
+                    <input type="checkbox" name="hobby" value="playgame"> Chơi game
+                    <input type="checkbox" name="hobby" value="movie"> Điện ảnh <br>
+                    <input type="checkbox" name="hobby" value="travel">Du lịch
+                </td>
+
+
+            </tr>
+
+        </table>
+    </div>
+
+
+    <p>
+        <input type="button" name="Submit Form" value="Gửi thông tin"/>
+        <input type="button" name="Reset Form" value="Nhập lại"/>
+    </p>
+
+
+    </body>
+</fieldset>
+
 </html>
