tao_form_don_gian

--- a/html_baitap/tao_form_don_gian/tao_form_don_gian.html
+++ b/html_baitap/tao_form_don_gian/tao_form_don_gian.html
@@ -40,9 +40,9 @@
     <div>
         <table>
             <tr>
-                <th style="color: blue">
+                <td style="color: blue">
                     Sở thích
-                </th>
+                </td>
 
                 <td style="color: orange">
                     <input type="checkbox" name="hobby" value="sport">Thể thao
@@ -51,7 +51,10 @@
                     <input type="checkbox" name="hobby" value="surfing">Lướt web
                     <input type="checkbox" name="hobby" value="playgame"> Chơi game
                     <input type="checkbox" name="hobby" value="movie"> Điện ảnh <br>
-                    <input type="checkbox" name="hobby" value="travel">Du lịch
+                    <input type="checkbox" name="hobby" value="travel">Du lịch<br>
+                    <input type="button" name="Submit Form" value="Gửi thông tin">
+                    <input type="button" name="Reset Form" value="Nhập lại">
+
                 </td>
 
 
@@ -59,14 +62,6 @@
 
         </table>
     </div>
-
-
-    <p>
-        <input type="button" name="Submit Form" value="Gửi thông tin"/>
-        <input type="button" name="Reset Form" value="Nhập lại"/>
-    </p>
-
-
     </body>
 </fieldset>
 
