--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai2.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai2.html
@@ -7,10 +7,9 @@
 <body>
 <script>
     let a = +prompt("nhap tuoi")
-    if ( a >=15 ){
+    if (a >= 15) {
         alert("đủ điều kiện học lớp 10")
-    }
-    else {
+    } else {
         alert("không đủ điều kiện học lớp 10")
     }
 </script>
