--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai3.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai3.html
@@ -9,8 +9,7 @@
     let a = +prompt("nhap so")
     if (a > 0) {
         alert("số vừa nhập lớn hơn 0")
-    }
-    else {
+    } else {
         alert("số vừa nhập nhỏ hơn 0")
     }
 </script>
