--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai4.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai4.html
@@ -6,22 +6,18 @@
 </head>
 <body>
 <script>
-      let a = +prompt("nhap so a")
-          b = +prompt("nhap so b")
-          c = +prompt("nhap so c")
+    let a = +prompt("nhap so a")
+    b = +prompt("nhap so b")
+    c = +prompt("nhap so c")
     if (a > b && a > c) {
         alert("số lớn nhất là a")
-    }
-    else {
+    } else {
         if (b > c) {
             alert("số lớn nhất là b")
-        }
-        else {
+        } else {
             alert("số lớn nhất là c")
         }
-      }
-
-
+    }
 
 
 </script>
