--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai1.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai1.html
@@ -6,15 +6,13 @@
 </head>
 <body>
 <script>
-   let a = +prompt("so thu 1","")
-       b = +prompt("so thu 2","")
-    if (a % b === 0 ) {
+    let a = +prompt("so thu 1", "")
+    b = +prompt("so thu 2", "")
+    if (a % b === 0) {
         alert("a chia het cho b")
+    } else {
+        alert("a khong chia het cho b")
     }
-    else
-        {
-            alert("a khong chia het cho b")
-        }
 </script>
 </body>
 </html>
