--- a/html_baitap/if_switch/tinh_so_ngay/tinh_so_ngay.html
+++ b/html_baitap/if_switch/tinh_so_ngay/tinh_so_ngay.html
@@ -9,38 +9,38 @@
 <button onclick="check_month()"> Tính số ngày</button>
 <p id="result" >  </p>
 <script>
-    let thang_1 = "1";
-    let thang_2 = "2";
-    let thang_3 = "3";
-    let thang_4 = "4";
-    let thang_5 = "5";
-    let thang_6 = "6";
-    let thang_7 = "7";
-    let thang_8 = "8";
-    let thang_9 = "9";
-    let thang_10 = "10";
-    let thang_11 = "11";
-    let thang_12 = "12";
+    let thang1 = "1";
+    let thang2 = "2";
+    let thang3 = "3";
+    let thang4 = "4";
+    let thang5 = "5";
+    let thang6 = "6";
+    let thang7 = "7";
+    let thang8 = "8";
+    let thang9 = "9";
+    let thang10 = "10";
+    let thang11 = "11";
+    let thang12 = "12";
 
     function check_month() {
         let month = document.getElementById("month").value;
         switch (month) {
-            case thang_1:
-            case thang_3:
-            case thang_5:
-            case thang_7:
-            case thang_8:
-            case thang_10:
-            case thang_12:
+            case thang1:
+            case thang3:
+            case thang5:
+            case thang7:
+            case thang8:
+            case thang10:
+            case thang12:
                 document.getElementById("result").innerHTML = "Tháng" + month + " có 31 ngày"
                 break;
-            case thang_4:
-            case thang_6:
-            case thang_9:
-            case thang_11:
+            case thang4:
+            case thang6:
+            case thang9:
+            case thang11:
                 document.getElementById("result").innerHTML = "Tháng" + month + " có 30 ngày"
                 break;
-            case thang_2:
+            case thang2:
                 document.getElementById("result").innerHTML = "Tháng" + month + " có 28,29 ngày"
                 break;
             default: document.getElementById("result").innerHTML = " Vui lòng nhập lại tháng"
