cau_truc_dieu_kien_2

--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai12.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai12.html
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>bài12</title>
+    <title>tinh_lai_ngan_hang</title>
 </head>
 <body>
 <script>
-    
+    let money = +prompt("Nhập số tiền ban đầu: (triệu) ");
+    let year = +prompt("Nhập số năm: ");
+    let rate = +prompt("Nhập lãi suất hàng năm: (%) ");
+    let interest = money * Math.pow((1 + (rate / 100)), year);
+    if (money > 0 && rate >= 0 && year > 0) {
+        document.write("Tiền ngân hàng sau lãi:" + Math.round(interest) + " triệu đồng");
+    } else {
+        document.write("Sai số nhập vào. Vui lòng nhập lại");
+    }
 </script>
 </body>
 </html>
