luyen_tap_cau_truc_dieu_kien_2

--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai1.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai1.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-    let a = +prompt("Nhập độ C")
+    let a = +prompt("Nhập độ C");
     b = a * (9 / 5) + 32
-    alert(" độ F = " + b)
+    alert(" độ F = " + b);
 
 
 </script>
