--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai10.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai10.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let chudien = +prompt("nhập vào chữ điện")
+    let chudien = +prompt("nhập vào chữ điện");
     giadien = chudien * 3.076;
     alert("giá điện = " + giadien);
 </script>
