--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai11.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai11.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-    let tienthunhap = +prompt("tiền thu nhập cá nhân")
+    let tienthunhap = +prompt("tiền thu nhập cá nhân");
     thuethunhap = tienthunhap * 10 / 100;
-    alert("thuế thu nhập cá nhân = " + thuethunhap)
+    alert("thuế thu nhập cá nhân = " + thuethunhap);
 </script>
 </body>
 </html>
