--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai2.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai2.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-    let a = +prompt("nhap số mét")
+    let a = +prompt("nhap số mét");
     b = a * 3.2808
-    alert("độ dài đổi sang feet = " + b)
+    alert("độ dài đổi sang feet = " + b);
 </script>
 </body>
 </html>
