--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai3.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai3.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-    let a = +prompt("Nhập cạnh hình vuông")
+    let a = +prompt("Nhập cạnh hình vuông");
     s = a * a
-    alert("Diện tích hình vuông =" + s)
+    alert("Diện tích hình vuông =" + s);
 </script>
 </body>
 </html>
