--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai4.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai4.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <script>
-    let a = +prompt("Nhập cạnh dài hình chữ nhật")
-    b = +prompt("Nhập cạnh rộng hình chữ nhật")
-    s = a * b
-    alert("Diện tích hình chữ nhật =" + s)
+    let a = +prompt("Nhập cạnh dài hình chữ nhật");
+    b = +prompt("Nhập cạnh rộng hình chữ nhật");
+    s = a * b;
+    alert("Diện tích hình chữ nhật =" + s);
 </script>
 </body>
 </html>
