--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai5.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai5.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <script>
-    let a = +prompt("Nhập cạnh kề 1 của tam giác")
-    b = +prompt("Nhập cạnh kề 2 của tam giác")
-    s = (a * b) / 2
-    alert("Diện tích tam giác vuông =" + s)
+    let a = +prompt("Nhập cạnh kề 1 của tam giác");
+    b = +prompt("Nhập cạnh kề 2 của tam giác");
+    s = (a * b) / 2;
+    alert("Diện tích tam giác vuông =" + s);
 </script>
 </body>
 </html>
