--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai6.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai6.html
@@ -6,17 +6,17 @@
 </head>
 <body>
 <script>
-    let t = +prompt("nhập vào a")
-    u = +prompt("nhập vào b")
-    n = -(u / t)
+    let t = +prompt("nhập vào a");
+    u = +prompt("nhập vào b");
+    n = -(u / t);
     if (t == 0 && u != 0) {
-        alert("phương trình vô nghiệm")
+        alert("phương trình vô nghiệm");
     } else if (t == 0 && u == 0) {
-        alert("phương trình vô số nghiệm")
+        alert("phương trình vô số nghiệm");
     } else if (t != 0 && u == 0) {
-        alert("phương trình có nghiệm = 0 ")
+        alert("phương trình có nghiệm = 0 ");
     } else {
-        alert("phương trình có nghiệm duy nhất =" + n)
+        alert("phương trình có nghiệm duy nhất =" + n);
     }
 
 
