--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai8.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai8.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let tuoi = +prompt("nhập vào số tuổi")
+    let tuoi = +prompt("nhập vào số tuổi");
     if (tuoi > 0 && tuoi < 120) {
         alert(tuoi === Math.floor(tuoi));
     } else {
