--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai9.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai9.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 <script>
-    let a = +prompt("nhập cạnh a")
-    b = +prompt("nhập cạnh b")
-    c = +prompt("nhập cạnh c")
+    let a = +prompt("nhập cạnh a");
+    b = +prompt("nhập cạnh b");
+    c = +prompt("nhập cạnh c");
     if (a, b, c > 0, a + b > c, b + c > a, a + c > b) {
-        alert("là một tam giác")
+        alert("là một tam giác");
     } else {
-        alert("không phải là một tam giác")
+        alert("không phải là một tam giác");
     }
 </script>
 </body>
