--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai7.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien_2/bai7.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-    let a1 = +prompt("nhập vào a")
-    b1 = +prompt("nhập vào số b")
-    c1 = +prompt("nhập vào số c")
+    let a1 = +prompt("nhập vào a");
+    b1 = +prompt("nhập vào số b");
+    c1 = +prompt("nhập vào số c");
     delta = (Math.pow(b1, 2)) - (4 * a1 * c1);
     x1 = x2 = -b1 / 2 * a1;
     x3 = (-b1 + (Math.sqrt(delta))) / (2 * a1);
