cau_truc_dieu_kien

--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai1.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai1.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <script>
-    let a = +prompt("so thu 1", "")
-    b = +prompt("so thu 2", "")
+    let a = +prompt("so thu 1", "");
+    b = +prompt("so thu 2", "");
     if (a % b === 0) {
-        alert("a chia het cho b")
+        alert("a chia het cho b");
     } else {
-        alert("a khong chia het cho b")
+        alert("a khong chia het cho b");
     }
 </script>
 </body>
