--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai2.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai2.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <script>
-    let a = +prompt("nhap tuoi")
+    let a = +prompt("nhap tuoi");
     if (a >= 15) {
-        alert("đủ điều kiện học lớp 10")
+        alert("đủ điều kiện học lớp 10");
     } else {
-        alert("không đủ điều kiện học lớp 10")
+        alert("không đủ điều kiện học lớp 10");
     }
 </script>
 </body>
