--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai3.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai3.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <script>
-    let a = +prompt("nhap so")
+    let a = +prompt("nhap so");
     if (a > 0) {
-        alert("số vừa nhập lớn hơn 0")
+        alert("số vừa nhập lớn hơn 0");
     } else {
-        alert("số vừa nhập nhỏ hơn 0")
+        alert("số vừa nhập nhỏ hơn 0");
     }
 </script>
 </body>
