--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai4.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai4.html
@@ -6,16 +6,16 @@
 </head>
 <body>
 <script>
-    let a = +prompt("nhap so a")
-    b = +prompt("nhap so b")
-    c = +prompt("nhap so c")
+    let a = +prompt("nhap so a");
+    b = +prompt("nhap so b");
+    c = +prompt("nhap so c");
     if (a > b && a > c) {
-        alert("số lớn nhất là a")
+        alert("số lớn nhất là a");
     } else {
         if (b > c) {
-            alert("số lớn nhất là b")
+            alert("số lớn nhất là b");
         } else {
-            alert("số lớn nhất là c")
+            alert("số lớn nhất là c");
         }
     }
 
