--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai5.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai5.html
@@ -6,24 +6,24 @@
 </head>
 <body>
 <script>
-    let xx = +prompt("nhap điểm kiểm tra")
-        yy = +prompt("nhap điểm giũa kì")
-         zz = +prompt("nhap điểm cuối kì")
+    let xx = +prompt("nhap điểm kiểm tra");
+        yy = +prompt("nhap điểm giũa kì");
+         zz = +prompt("nhap điểm cuối kì");
     dtb = (xx + yy + zz) / 3;
     if (dtb < 5) {
-        alert("hoc sinh yếu")
+        alert("hoc sinh yếu");
     }
     if (6.5 > dtb > 5) {
-        alert("hoc sinh trung bình")
+        alert("hoc sinh trung bình");
     }
     if (7.9 > dtb >= 6.5) {
-        alert("hoc sinh khá")
+        alert("hoc sinh khá");
     }
     if (9.5 > dtb >= 8) {
-        alert("hoc sinh giỏi")
+        alert("hoc sinh giỏi");
     }
     if (dtb > 9.5) {
-        alert("hoc sinh xuất sắc")
+        alert("hoc sinh xuất sắc");
     }
 
 </script>
