--- a/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai6.html
+++ b/html_baitap/if_switch/luyen_tap_cau_truc_dieu_kien/bai6.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <script>
-    let a = +prompt("doanh số bán hàng")
+    let a = +prompt("doanh số bán hàng");
     if (20000000 > a > 10000000) {
-        alert("hoa hồng 10%")
+        alert("hoa hồng 10%");
     }
     if (a > 20000000) {
-        alert("hoa hồng 12%")
+        alert("hoa hồng 12%");
     }
 
 </script>
