--- a/html_baitap/vonglap/luyentap1/1.2.html
+++ b/html_baitap/vonglap/luyentap1/1.2.html
@@ -10,12 +10,12 @@
     do {
         t = +prompt("nhập vào nhiệt độ");
         if (t > 100) {
-            alert("giảm nhiệt độ!")
+            alert("giảm nhiệt độ!");
         } else if (t < 20) {
-            alert("tăng nhiệt độ!")
+            alert("tăng nhiệt độ!");
         }
     } while (t > 100 || t < 20);
-        alert("nhiệt độ bình thường");
+    alert("nhiệt độ bình thường");
 </script>
 </body>
 </html>
