--- a/html_baitap/vonglap/luyentap1/1.6.html
+++ b/html_baitap/vonglap/luyentap1/1.6.html
@@ -6,8 +6,13 @@
 </head>
 <body>
 <script>
-    let a = 1;
-
+    let count = 0;
+    let sum = 0;
+    for (let i = 7; count < 30; i = i + 7) {
+        sum += i;
+        count++;
+    }
+    document.write(sum);
 </script>
 </body>
 </html>
