--- a/html_baitap/vonglap/so_nguyen_to.html
+++ b/html_baitap/vonglap/so_nguyen_to.html
@@ -7,15 +7,15 @@
 <body>
 <script>
     let number = prompt("Nhập vào số lượng số nguyên tố");
-    count = 0;
-    num = 2;
+    let count = 0;
+    let num = 2;
     primeList = [];
 
     function isPrime(n) {
 
-        if (n == 1 || n == 0) return false;
+        if (n === 1 || n === 0) return false;
         for (let i = 2; i < n; i++) {
-            if (n % i == 0) return false;
+            if (n % i === 0) return false;
         }
         return true;
     }
