--- a/html_baitap/mang/luyentap2.4.html
+++ b/html_baitap/mang/luyentap2.4.html
@@ -7,12 +7,12 @@
 <body>
 <script>
     const arr = [];
-    let length = +prompt("nhập độ dài của mảng:");
+    let length = +prompt("nhập độ dài của chuỗi:");
     arr.length = length;
     let input;
     let count = 0;
     for (let i = 0; i < arr.length; i++) {
-        input = prompt("các giá trị của mảng:");
+        input = prompt("các giá trị của chuỗi:");
         arr[i] = input;
         if (isNaN(arr[i])) count++;
     }
