--- a/html_baitap/ham/luyentap2.3.html
+++ b/html_baitap/ham/luyentap2.3.html
@@ -13,7 +13,7 @@
         for (let i = 1; i <= num; i++) {
             factorialResult *= i;
         }
-        return alert("giai thừa của số là" + factorialResult);
+        alert("giai thừa của số là" + factorialResult);
     }
 
     factorial(num);
