--- a/html_baitap/ham/luyentap2.4.html
+++ b/html_baitap/ham/luyentap2.4.html
@@ -7,9 +7,9 @@
 <body>
 <script>
 
-    let n = prompt("nhập vào một ký tự")
+    let n = prompt("nhập vào một ký tự");
 
-    function kytuso() {
+    function kyTuso() {
         if (!isNaN(n)) {
             return true;
         } else {
@@ -17,7 +17,7 @@
         }
     }
 
-    document.write(kytuso(n));
+    document.write(kyTuso(n);
 </script>
 </body>
 </html>
