--- a/html_baitap/ham/luyentap2.6.html
+++ b/html_baitap/ham/luyentap2.6.html
@@ -7,13 +7,13 @@
 <body>
 <script>
 
-    let n = +prompt("nhập vào một số")
+    let n = +prompt("nhập vào một số");
 
-    function songuyenduong(n) {
+    function soNguyenduong(n) {
         return (Number.isInteger(n) && n > 0);
     }
 
-    document.write(songuyenduong(n));
+    document.write(soNguyenduong(n));
 </script>
 </body>
 </html>
