--- a/html_baitap/ham/luyentap2.9.html
+++ b/html_baitap/ham/luyentap2.9.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body onload="alert(charCheck(char, string))">
 <script>
-    
+    let char = prompt("Enter a character:");
+    let string = prompt("Enter a series of characters:");
+    let count = 0;
+
+    function charCheck(char, series) {
+        for (let i = 0; i < series.length; i++) {
+            if (char === series[i]) {
+                count += 1;
+            }
+        }
+        if (count === 0) return -1;
+        else return count;
+    }
 </script>
 </body>
 </html>
