--- a/html_baitap/vonglap/so_nguyen_to.html
+++ b/html_baitap/vonglap/so_nguyen_to.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let number = prompt("Nhập vào số lượng số nguyên tố");
+    let number = +prompt("Nhập vào số lượng số nguyên tố");
     let count = 0;
     let num = 2;
     primeList = [];
