--- a/html_baitap/ham/luyentapham2.3.html
+++ b/html_baitap/ham/luyentapham2.3.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let a = +prompt("nhập số cần kiểm tra");
+    let b = []
+    function findMaxNumber(n) {
+        if (n < 1000 || n > 10000) {
+            return '-1';
+        } else {
+            b.push(a)
+        }
+    }
+    alert(findMaxNumber(a))
+   console.log(b)
+</script>
 </body>
 </html>
