--- a/html_baitap/caseStudy/1.html
+++ b/html_baitap/caseStudy/1.html
@@ -6,38 +6,24 @@
 </head>
 <body>
 <script>
-    // let b = prompt("Nhập ký tự cần kiểm tra");
-    // let a = ["a", "u", "i", "a", "e", "O", "U", "I", "A", "E"];
-    // let flag;
-    //
-    // for (let i = 0; i < a.length; i++) {
-    //     if (b === a[i]) {
-    //         flag = true;
-    //     } else {
-    //         flag = false;
-    //     }
-    // }
-    // if (flag === true) {
-    //     document.write("là nguyên âm");
-    // } else {
-    //     document.write("là phụ âm");
-    // }
-    let a = prompt('nhap ky tu');
-    let arraya = ['u', 'o', 'i', 'a', 'e'];
-    let arrayb = ['U', 'O', 'I', 'A', 'E'];
+    let b = prompt("Nhập ký tự cần kiểm tra");
+    let a = ["a", "u", "i", "a", "e", "O", "U", "I", "A", "E"];
     let flag = true;
-    for (let i = 0; i < arraya.length; i++) {
-        if (a === arraya[i] || a === arrayb[i]) {
-            flag = true
+
+    for (let i = 0; i < a.length; i++) {
+        if (b === a[i]) {
+            flag = true;
+            break;
         } else {
             flag = false;
         }
     }
     if (flag === true) {
-        document.writeln("la nguyen am")
+        document.write("là nguyên âm");
     } else {
-        document.writeln("la phu am ")
+        document.write("là phụ âm");
     }
+
 
 </script>
 </body>
